# zkyhaxpy

./: .gitignore  HOW TO INSTALL LOCALLY.txt  INSTALL_ZKYHAXPY_CROP_ENV.bat  LICENSE  README.md  build_and_publish.bat  how-to-publish-to-pypi.txt  pyproject.toml  setup.py
zkyhaxpy/: __init__.py  aws_tools.py  binary_tools.py  colab_tools.py  console_tools.py  cryptography_tools.py  data_package_tools.py  dict_tools.py  dttm_tools.py  ftp_tools.py  gcp_tools.py  gis_tools.py  gis_tools_no_gdal.py  hash_tools.py  http_tools.py  io_tools.py  json_tools.py  jupyter_tools.py  log_tools.py  ml_tools.py  mpl_tools.py  multitask_tools.py  np_tools.py  numpy_tools.py  pd_tools.py  skopt_tools.py  snippet_tools.py  timer_tools.py  util_tools.py  viz_tools.py
zkyhaxpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zkyhaxpy/gis/shapes/: thailand.py
zkyhaxpy/misc/: data_for_fraud_project.py  population_stats.py  postcode.py  prov_pop.py  prov_region.py  shapes.py
