[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zkyhaxpy"
# We tell it to look for the version inside the code
dynamic = ["version"]
authors = [
  { name="Surasak Choedpasuporn", email="surasak.cho@gmail.com" },
]
description = "A swiss-knife Data Science package for python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Add any libraries you usually need here
dependencies = [
    "pandas",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/surasakcho/zkyhaxpy"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
# Note the "*" to include all files in those specific subdirectories
"zkyhaxpy" = [
    "data_package/*", 
    "misc/*.py"
]


[tool.setuptools.dynamic]
# This tells setuptools where to find the version string
version = {attr = "zkyhaxpy.__init__.__version__"}
